# voice-recording-transscript

./: .gitignore  README.md  plan-a-openai-realtime.md  plan-c-gladia-local.md  pyproject.toml
src/transcribe/: cli.py  config.py  meetings.py  output.py  prompt.py  session.py  teams.py
src/transcribe/audio/: mic.py  system.py
src/transcribe/realtime/: client.py  protocol.py
