[project]
name = "transcribe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "websockets>=12.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
]

[project.scripts]
transcribe = "transcribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe"]
